# oxygen-fonts

./: CMakeLists.txt  OxygenFontConfig.cmake.in  README  README.md  Untitled.spe  generate-ttf.pe  org.kde.oxygen-fonts.metainfo.xml
Bold/: .directory
Bold/src/: .directory  OxygenSans-Bold-Glyphs.glyphs  OxygenSans-Bold-TT.sfd  OxygenSans-Bold.sfd  OxygenSans-Bold.sfd-01  OxygenSans-Bold.sfd-02  OxygenSans-Bold.sfd-03  OxygenSans-Bold.sfd-04  OxygenSans-Bold.sfd-05
Extra-Light/src/: OxygenSans-Extra-light.sfd  OxygenSans-Thin.sfd  OxygenSans-Thin.sfd-01  OxygenSans-Thin.sfd-02  OxygenSans-Thin.sfd.~01
Fontlab-Old/: Oxygen-Bold.vfb  Oxygen.vfb  OxygenMono.vfb  README
GWF/: .directory
GWF/Oxygen-Light/: Oxygen-Light.sfd
GWF/Oxygen-Medium/: OFL.txt
GWF/Oxygen-Regular/: .directory  INFO.txt
GWF/interpolations/: oxygen-reg-heavy.spe
Mono/: OxygenMono-Regular.sfd-01  OxygenMono-Regular.sfd-02  OxygenMono-Regular.sfd-03  OxygenMono-Regular.sfd-04  OxygenMono-Regular.sfd-05  OxygenMono-Regular.sfd-06  OxygenMono-Regular.sfd-07  OxygenMono-Regular.sfd-08  OxygenMono-Regular.sfd-09  OxygenMono-Regular.sfd-10  OxygenMono-Regular.sfd-11
Monospace/: OFL.txt  OxygenMono.sfd  OxygenMono.vfb  README
Monospace/OxygenMono-Regular.ufo/: lib.plist
Monospace/src/: OxygenMono.sfd
Oxygen-Bold/: OFL.txt  Oxygen-Bold-kern.fea  Oxygen-Bold-test.sfd  Oxygen-Bold.sfd  Oxygen-Bold.vfb  README
Oxygen-Bold/Oxygen-Bold.ufo/: feature.fea  features.fea  fontinfo.plist  groups.plist  kerning.plist  lib.plist
Oxygen-Bold/src/: Oxygen-Bold.sfd
Oxygen-Italic/: Oxygen-Italic.sfd
Oxygen-Italic/Oxygen-Italic.ufo/: fontinfo.plist  lib.plist
Oxygen-Italic/src/: Oxygen-Italic.sfd
Oxygen-Regular/: OFL.txt  Oxygen (2012-02-24 20-12-09 GMT).vfb  Oxygen-NewMetrics.sfd  Oxygen-TTF.sfd  Oxygen-kern.fea  Oxygen-old-xheight.sfd  Oxygen.sfd  Oxygen.vfb  README  style.css
Oxygen-Regular/Oxygen.ufo/: feature.fea  features.fea  fontinfo.plist  groups.plist  kerning.plist  lib.plist
Oxygen-Regular/OxygenFF.ufo/: feature.fea  fontinfo.plist  lib.plist
Oxygen-Regular/hinting/: Oxygen.vfb  Oxygen.vfbak
Oxygen-Regular/src/: Oxygen-GWF.sfd  Oxygen-TT.sfd  Oxygen-TTF.sfd  Oxygen.sfd
Regular/: .directory
Regular/src/: OxygenSans-Regular.sfd  OxygenSans-Regular.sfd-01  OxygenSans-Regular.sfd-02
SP_Instances/: OxygenSans-Bold.sfd  OxygenSans-Bold.sfd-01  OxygenSans-Book.sfd  OxygenSans-Book.sfd-01  OxygenSans-Book.sfd-02  OxygenSans-Book.sfd-03  OxygenSans-Book.sfd-04  OxygenSans-Book.sfd-05  OxygenSans-Regular.sfd  OxygenSans-Regular.sfd-01  OxygenSans-Regular.sfd-02  OxygenSans-Regular.sfd-03  OxygenSans-Regular.sfd-04  OxygenSans-Regular.sfd-05  OxygenSans-Regular.sfd-06  OxygenSans-Regular.sfd-07  OxygenSans-Regular.sfd-08  OxygenSans-Regular.sfd-09  OxygenSans-Regular.sfd-10  OxygenSans-Regular.sfd-11  OxygenSans-Regular.sfd-12  OxygenSans-Regular.sfd-13  OxygenSans-Regular.sfd-14  OxygenSans-Regular.sfd-15  OxygenSans-Regular.sfd-16  OxygenSans-Regular.sfd-17  OxygenSans-Regular.sfd-18  OxygenSans-Regular.sfd-19  OxygenSans-Regular.sfd-20  OxygenSans-Regular.sfd-21  OxygenSans-Regular.sfd-22  OxygenSans-Regular.sfd-23  OxygenSans-Regular.sfd-24  OxygenSans-Regular.sfd-25  OxygenSans-Regular.sfd-26  OxygenSans-Regular.sfd-27  OxygenSans-Regular.sfd-28  OxygenSans-Regular.sfd-29  OxygenSans-Regular.sfd-30  OxygenSans-Regular.sfd-31  (+2 more)
SP_Instances/OxygenSans-Black.ufo/: fontinfo.plist
SP_Instances/OxygenSans-Book.ufo/: fontinfo.plist
SP_Instances/OxygenSans-Regular.ufo/: fontinfo.plist  lib.plist
SP_Instances/OxygenSans-Thin-condensed.ufo/: feature.fea  fontinfo.plist
SP_Instances/OxygenSans-Thin.ufo/: fontinfo.plist
in-progress/: LICENCE.txt  OFL.txt  Oxygen-Bold.sfd  Oxygen-Regular.sfd  Oxygen.sfd  OxygenMono-Regular.sfd  OxygenMono.sfd  OxygenSans-Bold.sfd  OxygenSans-Regular.sfd  Untitled.spe  readme.md
in-progress/Bold/: Oxygen-Heavy-kern.fea  OxygenSans-Bold.sfd
in-progress/Bold-Italic/: Oxygen-Bold-Italic.sfd
in-progress/Mono/: OxygenMono-Regular.sfd
in-progress/Monospace/: .directory
in-progress/Oxygen-Bold/: .directory
in-progress/Oxygen-Heavy.ufo/: fontinfo.plist  (+1 more)
tools/: cyrillic.txt  oxygen-bold-test.ui  oxygen-superpolation.spe  oxygen-test.ui
(+35625 files in other folders)
